add title to wish form and forward it to api

--- a/views/help/forms/form_wish.hbs
+++ b/views/help/forms/form_wish.hbs
@@ -2,6 +2,10 @@
 <input type="hidden" name="type" value="wish">
 
 <label class="form-group">
+	<span class="control-label" for="title">Kurzbeschreibung</span>
+	<input type="text" name="title" id="wishTitle" placeholder="Kurzbeschreibung des Wunsches" class="form-control" required>
+</label>
+<label class="form-group">
   <span class="control-label">Als...</span>
   <input type="text" name="role" placeholder="z.B. Schüler, Lehrer, Administrator, Hausmeister usw." class="form-control" required>
 </label>
