Remove Botton: Student can edit

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -83,7 +83,8 @@
 									<i class="fa fa-cogs"></i>
 								</a>
 
-                                {{#if ../canCreateFile}}
+                               <!-- #Hidden because no longer necessary
+							    {{#if ../canCreateFile}}
                                 {{#if this.isOfficeFile}}
                                     <a href="#"
                                        class="btn-student-allow"
@@ -95,8 +96,8 @@
                                           <i class="fa fa-ban fa-stack-2x" id="ban-{{@index}}" style="color:Tomato" {{#if this.studentCanEdit}}hidden{{/if}}></i>
                                         </span>
                                     </a>
-                                {{/if}}
-                                {{/if}}
+                                {{/if}} 
+                                {{/if}} -->
                             </div>
                         </div>
                     </div>
