--- a/views/lib/forms/form-contactHPI.hbs
+++ b/views/lib/forms/form-contactHPI.hbs
@@ -53,7 +53,8 @@
 </div>
 
 <div class="form-group">
-    <select name="category" id="category" data-placeholder="Kategorie wählen (optional)" class="chosen-select" tabindex="-1">
+	<label class="control-label optional">Bereich wählen</label>
+    <select name="category" id="category" data-placeholder="Bereich wählen (optional)" class="chosen-select" tabindex="-1">
         <option value="login_registration">Anmeldung/Registrierung</option>
         <option value="dashboard">Übersicht</option>
         <option value="courses">Kurse</option>
