linter-related stuff

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -41,7 +41,7 @@
                 {{#userHasPermission "PASSWORD_EDIT"}}
                 <div class="form-group">
                     <label>Neues Passwort:</label>
-                    <input type="password" name="password_new" id="password_new" class="form-control"
+                    <input type="password" name="passwordNew" id="passwordNew" class="form-control"
                         placeholder="***************"
                         pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
                         title="{{> "lib/forms/password-hint" plaintext=true}}">
