added legend, rename method, added tooltips, added css

--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -17,6 +17,18 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-sm-12 no-padding">
+                            <center>
+                                <i class="fa fa-building-o consent-status"></i>
+                                An eigener Schule erstelltes Team &emsp;
+                                <i class="fa fa-bus consent-status"></i>
+                                Beinhaltet Schul-externe Mitglieder &emsp;
+                                <i class="fa fa-briefcase consent-status"></i>
+                                Team hat Besitzer
+                            </center>
+                        </div>
+                    </div>
+                    <div class="row">
                         {{> "lib/components/pagination" settings=pagination }}
                     </div>
                     {{!-- <div class="row">
