--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -20,7 +20,7 @@
                         <div class="col-sm-12 no-padding">
                             <center>
                                 <i class="fa fa-building-o consent-status"></i>
-                                An eigener Schule erstelltes Team &emsp;
+                                An eigener Schule gegründetes Team &emsp;
                                 <i class="fa fa-bus consent-status"></i>
                                 Beinhaltet Schul-externe Mitglieder &emsp;
                                 <i class="fa fa-briefcase consent-status"></i>
