--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -24,7 +24,7 @@
                                 <i class="fa fa-bus consent-status"></i>
                                 Beinhaltet Schul-externe Mitglieder &emsp;
                                 <i class="fa fa-briefcase consent-status"></i>
-                                Team hat Besitzer
+                                Team hat Eigentümer
                             </center>
                         </div>
                     </div>
