rename css class name

--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -19,11 +19,11 @@
                     <div class="row">
                         <div class="col-sm-12 no-padding">
                             <center>
-                                <i class="fa fa-building-o consent-status"></i>
+                                <i class="fa fa-building-o team-flags"></i>
                                 An eigener Schule gegründetes Team &emsp;
-                                <i class="fa fa-bus consent-status"></i>
+                                <i class="fa fa-bus team-flags"></i>
                                 Beinhaltet Schul-externe Mitglieder &emsp;
-                                <i class="fa fa-briefcase consent-status"></i>
+                                <i class="fa fa-briefcase team-flags"></i>
                                 Team hat Eigentümer
                             </center>
                         </div>
