--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -13,7 +13,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            {{> "lib/components/table" head=head body=body}}
+                            {{> "lib/components/table" head=head body=body limit=false}}
                         </div>
                     </div>
                     <div class="row">
@@ -28,9 +28,10 @@
                             </center>
                         </div>
                     </div>
-                    <div class="row">
+                    {{!-- TODO --}}
+                    {{!-- <div class="row">
                         {{> "lib/components/pagination" settings=pagination }}
-                    </div>
+                    </div> --}}
                     {{!-- <div class="row">
                         <div class="col-sm-12 no-padding">
                             <button type="submit" class="btn btn-primary btn-add-modal">
