text and linter

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -59,6 +59,10 @@
 					<label>
 						<input type="checkbox" name="discoverable" value="true" {{#if isDiscoverable}}checked{{/if}}>
 						Sichtbar für Teameinladungen
+						<p class="text-muted">In Teams können neue externe Mitglieder über einen Verzeichnisdienst
+							eingeladen werden. Dort werden alle Nutzer angezeigt, die für Teameinladungen sichtbar
+							sind.</p>
+						</p>
 					</label>
 				</div>
 
