--- a/static/styles/oauth2/username.scss
+++ b/static/styles/oauth2/username.scss
@@ -2,7 +2,7 @@
 
 $primary_color: $primaryColor;
 $color_white: $colorWhite;
-$logo_background_tablet = $logoBackgroundTablet;
+$logo_background_tablet: $logoBackgroundTablet;
 
 body {
   margin: 0;
