--- a/static/styles/oauth2/username.scss
+++ b/static/styles/oauth2/username.scss
@@ -1,8 +1,8 @@
 @import '../../../theme/default/style';
 
-$primary_color: $primaryColor;
-$color_white: $colorWhite;
-$logo_background_tablet: $logoBackgroundTablet;
+$primary-color: $primaryColor;
+$color-white: $colorWhite;
+$logo-background-tablet: $logoBackgroundTablet;
 
 body {
   margin: 0;
@@ -10,10 +10,10 @@ body {
 }
 
 .depseudo {
-  background-color: $primary_color;
+  background-color: $primary-color;
   border: 1px solid transparent;
   border-radius: .25rem;
-  color: $color_white;
+  color: $color-white;
   font-family: 'PT Sans','Helvetica Neue',Helvetica,Arial,'sans-serif';
   font-size: 1rem;
   height: 20px;
@@ -27,7 +27,7 @@ body {
 }
 
 .cloud-logo {
-  background: $logo_background_tablet;
+  background: $logo-background-tablet;
   background-size: 28px 28px;
   display: inline-block;
   height: 20px;
