next codacy try

--- a/static/styles/oauth2/username.scss
+++ b/static/styles/oauth2/username.scss
@@ -1,8 +1,8 @@
 @import '../../../theme/default/style';
 
-$primary-color: $primaryColor;
-$color-white: $colorWhite;
-$logo-background-tablet: $logoBackgroundTablet;
+$primary-color: #b10438;
+$color-white: #fff;
+$logo-background-tablet: url("../../images/logo/cloud-transparent-mono-48-48.svg") no-repeat center;
 
 body {
   margin: 0;
