--- a/static/styles/lib/tabbar/tabbar.scss
+++ b/static/styles/lib/tabbar/tabbar.scss
@@ -12,31 +12,24 @@
       text-align: center;
       white-space: nowrap;
       cursor: pointer;
-      border : 0;
+      border: 0;
       background-color: $colorWhite;
       .text {
         display: inline-block;
         vertical-align: middle;
         cursor: pointer;
         font-weight: 500;
-
         font-size: 20px;
-        opacity: 0.54;
       }
-
-      .text:hover {
-        color: $primaryColor;
-      }
-
-      &.active .text {
-        opacity: 1;
+      &.active .text,
+      &:hover {
         color: $primaryColor;
       }
     }
 
     .indicator {
       position: absolute;
-      bottom: 11px;
+      bottom: 5px;
       height: 3px;
       background: $primaryColor;
     }
