--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -56,16 +56,16 @@
         <div class="tabContainer">
           <div class="tabs" data-max-width="1024">
             <button class="tab" data-tab="a">
-              <span class="text count-badge" data-badge="{{lessons.length}}">Themen</span>
+              <span class="text">Themen <span class="count-badge" data-badge="{{lessons.length}}"/></span>
             </button>
             <button class="tab" data-tab="b">
-              <span class="text count-badge" data-badge="{{ add (arrayLength ../myhomeworks)  (arrayLength ../homeworks) }}">Aufgaben</span>
+              <span class="text">Aufgaben <span class="count-badge" data-badge="{{ add (arrayLength ../myhomeworks)  (arrayLength ../homeworks) }}"/></span>
             </button>
             <button class="tab" data-tab="c">
-              <span class="text count-badge" data-badge="{{ltiToolIds.length}}">Tools</span>
+              <span class="text">Tools <span class="count-badge" data-badge="{{ltiToolIds.length}}"/></span>
             </button>
             <button class="tab" data-tab="d">
-              <span class="text count-badge" data-badge="{{courseGroups.length}}">Gruppen</span>
+              <span class="text">Gruppen <span class="count-badge" data-badge="{{courseGroups.length}}"/></span>
             </button>
           </div>
         </div>
