--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button class="btn btn-add btn-secondary btn-cancel">
+                    <button type="button" class="btn btn-secondary btn-cancel">
                         {{closeLabel}}
                     </button>
 
