--- a/views/news/article.hbs
+++ b/views/news/article.hbs
@@ -24,12 +24,12 @@
 </div>
 {{#unless isRSS}}
 <div class="mt-1">
-    {{#inArray 'edit' ../permissions}}
+    {{#inArray 'edit' ../news.permissions}}
     <a class="btn btn-primary btn-edit" href="/news/{{../news._id}}/edit" alt="Artikel '{{../news.title}}' bearbeiten.">
         Bearbeiten
     </a>
     {{/inArray}}
-    {{#inArray 'delete' ../permissions}}
+    {{#inArray 'edit' ../news.permissions}}
     <a class="btn btn-secondary btn-delete" href="/news/{{../news._id}}" target="_blank" data-method="DELETE"
         data-name="{{../news.title}}" alt="Artikel '{{../news.title}}' löschen" redirect="/news/">
         Löschen
