tab navigation is now implemented with query params, finished correct redirections in course area, url in browser bar is now changed when clicking on other tab

--- a/views/courses/components/tools.hbs
+++ b/views/courses/components/tools.hbs
@@ -13,7 +13,7 @@
               <span>{{this.name}}</span>
 
               {{#userHasPermission "TOOL_CREATE" }}
-                <a class="delete-tool" href="/courses/{{../../_id}}/tools/delete/{{../_id}}" target="_blank" data-method="DELETE" data-name="{{../name}}">
+                <a class="delete-tool" href="/courses/{{../../_id}}/tools/delete/{{../_id}}" target="_blank" data-method="DELETE" data-name="{{../name}}" redirect="/courses/{{../../_id}}/?activeTab=tools">
                   <i class="fa fa-trash-o"></i>
                 </a>
               {{/userHasPermission}}
