--- a/views/courses/courseGroup.hbs
+++ b/views/courses/courseGroup.hbs
@@ -118,7 +118,7 @@
             <div class="col-sm-12 col-md-12">
                 <a href="/courses/{{courseId}}/groups/{{_id}}/edit" class="btn btn-add btn-primary">Schülergruppe bearbeiten</a>
                 <a href="/courses/{{courseId}}/groups/{{_id}}" class="btn btn-delete-course btn-secondary" target="_blank" data-method="DELETE"
-                    data-name="{{../name}}" redirect="/courses/{{courseId}}">Schülergruppe löschen</a>
+                    data-name="{{../name}}" redirect="/courses/{{courseId}}/?activeTab=groups">Schülergruppe löschen</a>
             </div>
         </div>
 
