--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -77,7 +77,7 @@
               <i class="fa fa-folder-open"></i>
               Zu den Kursdateien
             </a>
-            <a class="btn btn-secondary" href="/courses/{{courseId._id}}" alt="Zum Kurs der Aufgabe">
+            <a class="btn btn-secondary" href="/courses/{{courseId._id}}/?activeTab=homeworks" alt="Zum Kurs der Aufgabe">
               <i class="fa fa-graduation-cap"></i>
               Zum Kurs
             </a>
