--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -66,7 +66,7 @@
                     {{/content}}
                 {{/embed}}
 
-                {{#embed "lib/components/modal-form" method="patch" class="remove-member-modal" collapseId=1}}
+                {{#embed "lib/components/modal-form" method="patch" class="remove-members-modal" collapseId=1}}
                     {{#content "fields"}}
                         {{> "administration/forms/form-remove-members"}}
                     {{/content}}
