fixing readability and div bleeding over in timetable

--- a/static/styles/calendar/calendar.scss
+++ b/static/styles/calendar/calendar.scss
@@ -16,6 +16,8 @@
 
             .fc-content {
                 padding: 5px;
+                color: $colorWhite;
+                background: $colorSemiTransparent;
 
                 .fc-title {
                     font-weight: 600;
